welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: value lentgh is not a member of Array[Int]
  for (i<- 0 to nums.lentgh-1){
                     ^indexOfValue:3: error: not found: type i
    if (lookingFor==nums[i]){return i}
                         ^indexOfValue:3: error: value nums of type Array[Int] does not take type parameters.
    if (lookingFor==nums[i]){return i}
                        ^